--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,19 @@ services:
         container_name: callboard
         image: callboard
         restart: always
-        environment:
-            PORT: 5000
-            HOST: 0.0.0.0
-            DEBUG: "False"
+        depends_on:
+            - redis
+            - mongo
+        # environment:
+        #     PORT: 5000
+        #     HOST: 0.0.0.0
+        #     DEBUG: "False"
 
-            MONGO_HOST: mongo
-            MONGO_PORT: 27017
+        #     MONGO_HOST: mongo
+        #     MONGO_PORT: 27017
             
-            REDIS_HOST: redis
-            REDIS_PORT: 6379
+        #     REDIS_HOST: redis
+        #     REDIS_PORT: 6379
 
         build:
             context: .
@@ -29,22 +32,22 @@ services:
 
     redis:
         container_name: redis
-        image: redis
+        image: redis:alpine
         restart: always
-        ports:
-            - "6379:6379"
-        networks: 
-            - my-network
+        networks:
+            default:
+                aliases:
+                    - redis
         
     
     mongo:
         container_name: mongo
         image: mongo
         restart: always
-        ports:
-            - "27017:27017"
         networks:
-            - my-network
+            default:
+                aliases: 
+                    - db
 
     nginx:
         container_name: nginx
@@ -56,8 +59,8 @@ services:
             - "80:80"
         volumes:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
-        networks: 
-            - my-network
+        # networks: 
+        #     - my-network
     
 networks: 
     my-network:
