--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,46 +8,54 @@ services:
         depends_on:
             - redis
             - mongo
-        # environment:
-        #     PORT: 5000
-        #     HOST: 0.0.0.0
-        #     DEBUG: "False"
+        environment:
+            PORT: 5000
+            HOST: 0.0.0.0
+            # DEBUG: "False"
 
-        #     MONGO_HOST: mongo
-        #     MONGO_PORT: 27017
+            MONGO_HOST: mongo
+            MONGO_PORT: 27017
             
-        #     REDIS_HOST: redis
-        #     REDIS_PORT: 6379
+            REDIS_HOST: redis
+            REDIS_PORT: 6379
 
         build:
             context: .
-        networks:
-            my-network:
-                aliases:
-                    - callboard
-        links: 
-            - redis
-            - mongo
+        # networks:
+        #     my-network:
+        #         aliases:
+        #             - callboard-app
+        # links: 
+        #     - redis
+        #     - mongo
 
 
     redis:
         container_name: redis
         image: redis:alpine
         restart: always
-        networks:
-            default:
-                aliases:
-                    - redis
+        ports:
+            - "6379:6379"
+        # networks:
+        #     default:
+        #         aliases:
+        #             - redis
+        # networks: 
+        #     - my-network
         
     
     mongo:
         container_name: mongo
         image: mongo
         restart: always
-        networks:
-            default:
-                aliases: 
-                    - db
+        ports: 
+            - "27017:27017"
+        # networks:
+        #     default:
+        #         aliases: 
+        #             - db
+        # networks: 
+        #     - my-network
 
     nginx:
         container_name: nginx
@@ -62,5 +70,5 @@ services:
         # networks: 
         #     - my-network
     
-networks: 
-    my-network:
+# networks: 
+#     my-network:
