--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         environment:
             PORT: 5000
             HOST: 0.0.0.0
-            # DEBUG: "False"
+            DEBUG: "False"
 
             MONGO_HOST: mongo
             MONGO_PORT: 27017
@@ -21,14 +21,6 @@ services:
 
         build:
             context: .
-        # networks:
-        #     my-network:
-        #         aliases:
-        #             - callboard-app
-        # links: 
-        #     - redis
-        #     - mongo
-
 
     redis:
         container_name: redis
@@ -36,12 +28,6 @@ services:
         restart: always
         ports:
             - "6379:6379"
-        # networks:
-        #     default:
-        #         aliases:
-        #             - redis
-        # networks: 
-        #     - my-network
         
     
     mongo:
@@ -50,12 +36,6 @@ services:
         restart: always
         ports: 
             - "27017:27017"
-        # networks:
-        #     default:
-        #         aliases: 
-        #             - db
-        # networks: 
-        #     - my-network
 
     nginx:
         container_name: nginx
@@ -67,8 +47,3 @@ services:
             - "80:80"
         volumes:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
-        # networks: 
-        #     - my-network
-    
-# networks: 
-#     my-network:
